--- a/computermngt/computerApp/templates/computerApp/machine_detail.html
+++ b/computermngt/computerApp/templates/computerApp/machine_detail.html
@@ -6,7 +6,7 @@
   <div class="card-body">
     <h1 class="card-title">Nom: {{ machine.nom }}</h1>
     <hr class="nav-border">
-    <p class="card-text"><strong>Date de maintenance:</strong> {{ machine.creation_date }}</p>
+    <p class="card-text"><strong>Date de création:</strong> {{ machine.creation_date }}</p>
     <hr class="nav-border">
     <p class="card-text"><strong>Machine:</strong> {{ machine.mach }}</p>
     <hr class="nav-border">
