--- a/computermngt/computerApp/templates/computerApp/machine_add.html
+++ b/computermngt/computerApp/templates/computerApp/machine_add.html
@@ -97,7 +97,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annuler</button>
-        <button type="button" class="btn btn-danger" onclick="window.location.href='{% url 'index' %}'">Quitter</button>
+        <button type="button" class="btn btn-danger" onclick="window.location.href='{% url 'machines' %}'">Quitter</button>
       </div>
     </div>
   </div>
