--- a/computermngt/computerApp/templates/computerApp/personnel_list.html
+++ b/computermngt/computerApp/templates/computerApp/personnel_list.html
@@ -1,9 +1,7 @@
 {% extends "index.html" %}
 
 {% block content %}
-<div class="text-center mt-4 mb-3">
-  <h1 style="margin-bottom: 1rem; text-decoration: underline;">Liste du personnel</h1>
-</div>
+
 
 <!-- Barre de recherche et filtres -->
 <div class="row justify-content-start mb-3" style="background-color: #333333; padding: 10px;">
@@ -61,25 +59,26 @@
 <div class="row">
   {% for personnel in personnels %}
   <div class="col-md-4">
-    <div class="card mb-3">
-      <div class="card-body row">
-        <div class="col-md-6">
-          <h5 class="card-title">{{ personnel.nom }}  {{ personnel.prenom }}</h5>
+    <div class="card mb-3" style="background-color: #333333; color: #ffffff; width: 90%; border: 1px solid #333333;">
+        <div class="card-body row">
+            <div class="col-md-6">
+                <h5 class="card-title" style="font-weight: bold; font-family: Arial, sans-serif;">{{ personnel.nom }}  {{ personnel.prenom }}</h5>
+            </div>
+            <div class="col-md-6">
+                <p class="card-text" style="font-weight: bold; font-family: Arial, sans-serif;"><u>Genre:</u> {{ personnel.genre }}</p>
+                <p class="card-text" style="font-weight: bold; font-family: Arial, sans-serif;"><u>Site:</u> {{ personnel.site }}</p>
+                <p class="card-text" style="font-weight: bold; font-family: Arial, sans-serif;"><u>Role:</u> {{ personnel.role }}</p>
+            </div>
+            <div class="col-md-12 d-flex justify-content-end mt-3">
+                <a href="{% url 'personnel-detail' personnel.id %}" class="btn btn-primary">Détail</a>
+                <button type="button" class="btn btn-danger ms-2" data-bs-toggle="modal" data-bs-target="#confirmDeleteModal{{ personnel.id }}">
+                    Supprimer
+                </button>
+            </div>
         </div>
-        <div class="col-md-6">
-          <p class="card-text">Genre: {{ personnel.genre }}</p>
-          <p class="card-text">Site: {{ personnel.site }}</p>
-          <p class="card-text">Role: {{ personnel.role }}</p>
-        </div>
-        <div class="col-md-12 d-flex justify-content-end mt-3">
-          <a href="{% url 'personnel-detail' personnel.id %}" class="btn btn-primary">Détail</a>
-          <button type="button" class="btn btn-danger ms-2" data-bs-toggle="modal" data-bs-target="#confirmDeleteModal{{ personnel.id }}">
-            Supprimer
-          </button>
-        </div>
-      </div>
     </div>
-  </div>
+</div>
+
 
   <!-- Confirm Delete Modal -->
   <div class="modal fade" id="confirmDeleteModal{{ personnel.id }}" tabindex="-1" role="dialog" aria-labelledby="confirmDeleteModalLabel{{ personnel.id }}" aria-hidden="true">
