--- a/computermngt/computerApp/templates/index.html
+++ b/computermngt/computerApp/templates/index.html
@@ -18,16 +18,15 @@
     <div class="container-fluid">
         <a class="navbar-brand" href="#">
             <img src="{% static 'computerApp/images/logo.PNG' %}" alt="Logo" class="d-inline-block align-text-top" style="height: 1.5rem;">
-            R&T Dev
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="home.html">Home</a>
+                    <a class="nav-link" href="{% url 'index' %}">Home</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -50,8 +49,23 @@
                     <a class="nav-link" href="{% url 'infrastructures' %}">Infrastructure</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'meteo' %}">Meteo</a>
+                    <a class="nav-link" href="{% url 'meteo' %}">Météo</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'dashboard' %}">Dashboard</a>
+                </li>
+            </ul>
+            <ul class="navbar-nav">
+                {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <a href="{% url 'logout' %}" class="btn btn-primary">Logout</a>
+                    </li>
+                {% else %}
+                    <li class="nav-item">
+                        <a href="{% url 'login' %}" class="btn btn-primary">Login</a>
+                    </li>
+                {% endif %}
+                
             </ul>
         </div>
     </div>
@@ -60,8 +74,11 @@
 
 {% block content %}
 <div class="container mt-4">
-    <h2>Contenu</h2>
-    <p>Blabla de la première page</p>
+    <div class="text-center">
+        <h1 class="display-3">Bienvenue sur l'espace de gestion de R&T Dev</h1>
+        <p class="italic">N'oubliez-pas, "un grand pouvoir implique de grandes responsabilités"</p>
+    </div>
+    <!-- Rest of the content -->
 </div>
 {% endblock %}
 
